# xmltojson

./: .gitignore  LICENSE.md  README.md  pyproject.toml  setup.py  utils.py  xmltojson.py
scripts/: xmltojson
xmltojson/: __init__.py
xmltojson/scripts/: cli.py
