[tool.poetry]
name = "xmltojson"
version = "2.0.1"
description = "A Python module and cli tool to quickly convert xml text or files into json"
authors = ["John Shanahan <shanahan.jrs@gmail.com>"]
maintainers = ["John Shanahan <shanahan.jrs@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/shanahanjrs/xmltojson"
repository = "https://github.com/shanahanjrs/xmltojson"
keywords = ["json", "xml", "convert", "converter", "library"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: XML"
]

[tool.poetry.dependencies]
python = "^3.7"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]
mypy = "^0.931"

[tool.poetry.scripts]
xmltojson = "xmltojson.scripts.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
